# v4

./: .gitattributes  .gitignore  .prettierignore  Anchor.toml  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE.txt  NOTES.md  README.md  SECURITY.md  buffer.json  deploy-program-init.sh  deploy-versioned-multisig.sh  extend-program.sh  package-lock.json  package.json  test-hook-keypair.json  test-program-config-initializer-keypair.json  test-program-keypair.json  tsconfig.json  turbo.json
.github/workflows/: check-staging-deployer-balance.yaml  publish-staging.yaml  reusable-publish-staging.yaml  reusable-tests.yaml  tests.yaml
cli/: Cargo.toml  README.md
cli/src/: main.rs  utils.rs
cli/src/command/: claim_rent.rs  config_transaction_create.rs  config_transaction_execute.rs  display_config_transaction.rs  display_proposals.rs  display_transaction.rs  display_vault.rs  initiate_batch_transfer.rs  initiate_program_upgrade.rs  initiate_transfer.rs  mod.rs  multisig_create.rs  program_config_init.rs  proposal_vote.rs  show_config_transaction.rs  show_transaction.rs  transfer_common.rs  vault_transaction_accounts_close.rs  vault_transaction_create.rs  vault_transaction_execute.rs
doc/: modules.html
doc/classes/: generated.Batch.html  generated.EmptyMembersError.html  generated.InvalidTransactionMessageError.html  generated.NoExecutorsError.html  generated.NoVotersError.html  generated.NotSupportedForControlledError.html  generated.ProgramConfig.html  generated.Proposal.html  generated.ProtectedAccountError.html  generated.SpendingLimit.html  generated.SpendingLimitExceededError.html  generated.SpendingLimitInvalidAmountError.html  types.Permissions.html
doc/enums/: generated.Vote.html
doc/functions/: errors.isErrorWithLogs.html  generated.createBatchAddTransactionInstruction.html  generated.createBatchExecuteTransactionInstruction.html  (+40 more)
docs/: dynamic-multisig.md  multisig-comparison.md
programs/modules-manager-program/: Cargo.toml
programs/modules-manager-program/src/: lib.rs
programs/multisig/: Cargo.toml
programs/multisig/src/: errors.rs  events.rs  lib.rs  state.rs
programs/multisig/src/instructions/: batch_add_transaction.rs  batch_create.rs  batch_execute_transaction.rs  config.rs  config_transaction_create.rs  config_transaction_execute.rs  config_transaction_vote.rs  create.rs  mod.rs  multisig_config.rs  multisig_create.rs  multisig_remove_spending_limit.rs  proposal_create.rs  proposal_vote.rs  transaction_create.rs  transaction_execute.rs  transaction_vote.rs  vault_transaction_create.rs  vault_transaction_execute.rs  vault_transaction_vote.rs
programs/multisig/src/state/: batch.rs  config_transaction.rs  mod.rs  multisig.rs  proposal.rs  seeds.rs  spending_limit.rs  vault_transaction.rs  votes.rs
programs/multisig/src/utils/: executable_transaction_message.rs  mod.rs  small_vec.rs  system.rs
programs/program_verifier_module/: Cargo.toml
programs/program_verifier_module/src/: lib.rs
programs/squads-modules-program/: Cargo.toml
programs/squads-modules-program/src/: lib.rs
programs/squads_hooks/: Cargo.toml
programs/squads_hooks/src/: errors.rs  lib.rs
programs/squads_hooks/src/instructions/: initialize_spending_limit_hook.rs  mod.rs  spending_limit_use_hook.rs
programs/squads_hooks/src/state/: interface_accounts.rs  mod.rs  seeds.rs  spending_limit_config.rs
programs/squads_multisig_program/: Cargo.toml
programs/squads_multisig_program/src/: allocator.rs  entrypoint.rs  errors.rs  lib.rs
programs/squads_multisig_program/src/instructions/: batch_add_transaction.rs  batch_create.rs  batch_execute_transaction.rs  config_transaction_create.rs  config_transaction_execute.rs  dynamic_multisig_create.rs  dynamic_multisig_member.rs  heap_test.rs  mod.rs  multisig_add_spending_limit.rs  multisig_config.rs  multisig_create.rs  multisig_remove_spending_limit.rs  program_config.rs  program_config_init.rs  proposal_activate.rs  proposal_create.rs  proposal_vote.rs  spending_limit_use.rs  transaction_accounts_close.rs  transaction_buffer_close.rs  transaction_buffer_create.rs  transaction_buffer_extend.rs  vault_transaction_create.rs  vault_transaction_create_from_buffer.rs  vault_transaction_execute.rs  vault_transaction_execute_with_hook.rs  versioned_proposal_create.rs  versioned_proposal_vote.rs
programs/squads_multisig_program/src/state/: batch.rs  config_transaction.rs  dynamic_multisig.rs  mod.rs  multisig.rs  program_config.rs  proposal.rs  seeds.rs  spending_limit.rs  transaction_buffer.rs  vault_transaction.rs  versioned_multisig.rs
programs/squads_multisig_program/src/utils/: ephemeral_signers.rs  executable_transaction_message.rs  mod.rs  small_vec.rs  system.rs
programs/versioned_squads_multisig_program/: Cargo.toml
programs/versioned_squads_multisig_program/src/: errors.rs  lib.rs
programs/versioned_squads_multisig_program/src/instructions/: mod.rs  multisig_config.rs  multisig_create.rs  program_config.rs  program_config_init.rs  transaction_buffer_close.rs  transaction_buffer_create.rs  transaction_buffer_extend.rs  vault_transaction_create.rs  vault_transaction_create_from_buffer.rs  vault_transaction_execute.rs  versioned_proposal_create.rs  versioned_proposal_vote.rs
programs/versioned_squads_multisig_program/src/state/: config_transaction.rs  mod.rs  program_config.rs  proposal.rs  transaction_buffer.rs  vault_transaction.rs  versioned_multisig.rs
programs/versioned_squads_multisig_program/src/utils/: executable_transaction_message.rs  mod.rs  small_vec.rs  system.rs
protocol-demo/: package-lock.json  package.json
sdk/: README.md
sdk/rs/: Cargo.toml
sdk/rs/src/: client.rs  lib.rs  pda.rs
sdk/rs/src/vault_transaction/: compiled_keys.rs  mod.rs  vault_transaction_message.rs
sdk/rs/src/vault_transaction_message/: compiled_keys.rs  mod.rs
sdk/rs/tests/: vault_transaction_execute_alt.rs
tests/: index.ts  multisig.ts  poc_3_batch_execute_transaction.ts  poc_3_unknown.ts  poc_4_execute_message.ts  swapTesting.ts  utils.ts  versioned-multisig-test-plan.md
versioned_cli/: Cargo.toml  README.md
(+621 files in other folders)
