[package]
name = "modules-manager-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "modules_manager_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.27.0"
squads-multisig-program = { version="0.2.0", path="../squads_multisig_program" }
squads-multisig = { path = "../../sdk/rs" }