[package]
name = "multisig"
version = "0.1.0"
description = "Squads Multisig Program V4"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "multisig"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "=0.27.0", features = ["allow-missing-optionals"] }
anchor-spl = { version="=0.27.0", features=["token"] }
solana-address-lookup-table-program = "=1.14.16"
