[package]
name = "squads-multisig"
version = "0.0.5"
description = "An SDK for building automated programs on Solana"
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://squads.so"
authors = ["Valentin Madrid <valentin@incility.com>"]
repository = "https://github.com/Squads-Protocol/v4"
documentation = "https://developers.squads.so"
keywords = ["solana", "multisig", "anchor", "squads", "cpi"]

[lib]
name = "squads_multisig"

[dependencies]
squads-multisig-program = { path = "../../programs/squads_multisig_program", features =["cpi", "no-entrypoint"], version = "0.1.1" }
solana-client = "1.14.16"
thiserror = "1.0.48"

[features]
default = []